[package]
name = "zero2prod"
version = "0.1.0"
authors = ["paulstey <paulstey@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"


[dev-dependencies]
actix-rt = "2"
reqwest = "0.11.1"
tokio = "1"
